# strim

./: .gitignore  Cargo.toml  README.md
.woodpecker/: ci-1.79.0.yml  ci-1.80.0.yml  ci.yml  tests.yml
dummy/: Cargo.toml  tests.rs
dummy/src/: byte_string.rs  c_string.rs  common.rs  lib.rs  string.rs
scripts/: test.sh
src/: arguments.rs  byte_string.rs  bytes.rs  c_string.rs  join_with.rs  lib.rs  string.rs
tests/: tests.rs
